added the availability route to the backend
